Fix umlauts and dynamic weather language
